tests/errors/missing_close_square_for_type.odl
main :: () -> void {
    arr := [2;
};